2009-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_XULRUNNER_VERSION): New macro.
	* configure.ac:
	Move XULRunner version check to its
	own macro and only execute when the plugin
	is turned on.

2009-05-05  Deepak Bhole <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Add conditional compilation block.
	* Makefile.am: Define a collapsed (comparable) version when compiling the
	plugin.
	* configure.ac: Determine a collapsed (comparable) version that can be
	used by the preprocessor for conditional compilation.

2009-05-04  Mark Wielaard  <mjw@redhat.com>

	* autogen.sh: Lower requirements to autoconf 2.59 and automake 1.9.6.
	* configure.ac (AM_INIT_AUTOMAKE): Require 1.9 or higher.
	(abs_top_builddir): Explicitly define.
	(abs_top_srcdir): Likewise.
	(additional-vms): Rewrite help string and description.
	* missing: Remove generated file (autogen.sh).

2009-05-05  Lillian Angel  <langel@redhat.com>

	Fixes BZ#313
	* Makefile.am
	(hotspot): Fixes paths and creates server directory before copy.

2009-05-05  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Building --with-additional-vms=zero and
	srcdir != builddir doesn't work.

2009-05-03  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES): Apply icedtea-cacao conditionally
	on BUILD_CACAO.
	(ADD_ZERO_EXTRA_BUILD_ENV): Filter out cacao patches passed in
	DISTRIBUTION_PATCHES.
	(stamps/add-zero.stamp, stamps/add-zero-debug.stamp): Remove obsolete
	unset commands.
	
2009-05-01  Matthias Klose  <doko@ubuntu.com>

	* patches/cacao/launcher.patch: Create new thread depending on the
	current VM.
	* Makefile.am (ICEDTEA_PATCHES): Apply unconditionally.
	(icedtea-against-icedtea): Add dependencies on stamps/add-cacao.stamp,
	stamps/add-zero.stamp.
	(icedtea-debug-against-icedtea): Add dependencies on
	stamps/add-cacao-debug.stamp, stamps/add-zero-debug.stamp.
	(stamps/add-{cacao,zero}{,-debug}.stamp: New.
	(clean, stamps/download.stamp, clean-download, stamps/extract.stamp