@@ -97,6 +97,14 @@ The following patches are only applied to OpenJDK6 in IcedTea6:
 * icedtea-timerqueue.patch: Fix setting of running variable (PR87/S6623943).
 * icedtea-version.patch: Fix (langtools) ant build to honor fcs MILESTONE setting (S6778493).
 * icedtea-io_util-overflow.patch: Replace some code to correctly handle overflows. (S6788196)
+* icedtea-bytecodeInterpreter.patch: Replace fast opcodes with opc_default.
+* icedtea-hotspot7-build-fixes.patch: Remove KERNEL #ifdef.
+* icedtea-ia64-bugfix.patch: Remove workaround for IA64 GCC bug.
+* icedtea-signature-iterator.patch: Add zero-specific signature handling.
+* icedtea-signed-types.patch: Make use of unsigned/signed types explicit.
+* icedtea-test-atomic-operations.patch: Add check to see if GCC's sync_lock_test works.
+* icedtea-zero.patch: Generalise architecture support, add ARM and #ifdef out non-zero applicable parts.
+* icedtea-shark.patch: Add support for the Shark JIT.
 
 The following patches are only applied to OpenJDK in IcedTea:
 
@@ -106,7 +114,6 @@ The following patches are only applied to OpenJDK in IcedTea:
   is broken in libgcj 4.3.
 * icedtea-override.patch: Remove @Override annotation in
   javax.management.AttributeValueExp (unsupported by ecj < 3.4).
-* icedtea-snmp.patch: Remove proprietary SNMP support hooks.
 
 The following patches are only applied to the icedtea-ecj bootstrap tree:
 
@@ -127,37 +134,9 @@ The following patches are only applied to the icedtea-ecj bootstrap tree in Iced
 * ecj/icedtea-pr40188.patch: Fix names to refer to constants generated by gjavah.
 * ecj/icedtea-sbcs.patch: Fixes GenerateSBCS.java to not use java.util.Scanner.
 
-The following patches are only applied for IcedTea builds using the zero-assembler:
-
-* icedtea-bytecodeInterpreter.patch: Replace fast opcodes with opc_default.
-* icedtea-bytecodeInterpreterWithChecks.patch: Same as icedtea-xslfix.patch (OpenJDK6 only, S6707485).
-* icedtea-eclipse-hotspot-6614100-7b24.patch: Fix Eclipse crash (S6614100). Fixed in OpenJDK7 b29/hs13.
-* icedtea-hotspot-6b12-7b24.patch: Upgrade to HotSpot from OpenJDK b24 (OpenJDK6 only).
-   - Never edit this patch.  It should be regenerated by unzipping the
-     openjdk6 build you're using into openjdk6, and the openjdk7 build
-     you want to use into openjdk, then running:
-       diff -ruNb openjdk{6,}/hotspot/src/share > icedtea-hotspot-6bXX-7bYY.patch
-       diff -ruNb openjdk{6,}/hotspot/src/os/linux >> icedtea-hotspot-6bXX-7bYY.patch
-* icedtea-hotspot7-build-fixes.patch: Remove KERNEL #ifdef.
-* icedtea-ia64-bugfix.patch: Remove workaround for IA64 GCC bug.
-* icedtea-signature-iterator.patch: Add zero-specific signature handling.
-* icedtea-signed-types.patch: Make use of unsigned/signed types explicit.
-* icedtea-test-atomic-operations.patch: Add check to see if GCC's sync_lock_test works.
-* icedtea-zero.patch: Generalise architecture support, add ARM and #ifdef out non-zero applicable parts.
-
-The following patches are only applied for IcedTea builds not using the zero-assembler:
-
-* icedtea-signed-types-hot6.patch: Make use of unsigned/signed types explicit.
-
-The following patches are only applied for IcedTea builds using the Shark JIT:
-
-* icedtea-shark.patch: Add support for the Shark JIT.
-
-The following patches are only applied when building with experimental NetX plugin support:
-
-* icedtea-netx-plugin.patch: Use NetxPanel instead of AppletViewerPanel.
-
 The following patches are only applied when building with the CACAO virtual machine:
+
+* cacao/ignore-tests.patch: Ignore tests known to fail on CACAO.
 
 The following patches are to support Xrender pipeline (-Dsun.java2d.xrender):
 
@@ -200,3 +179,11 @@ XSL file (S6707485): Included upstream in OpenJDK7 b29/hs13.
 * icedtea-license-headers.patch: Generate GPL header from automulti tool (PR148/S6713083).
 * icedtea-cc-interp-no-fer.patch: Replaced with icedtea-cc-interp-jvmti.patch, of which it is a subset.
 * icedtea-sound.patch: Remove proprietary MIDI support hooks.
+* icedtea-hotspot-6b12-7b24.patch: Upgrade to HotSpot from OpenJDK b24 (OpenJDK6 only).
+   - Never edit this patch.  It should be regenerated by unzipping the
+     openjdk6 build you're using into openjdk6, and the openjdk7 build
+     you want to use into openjdk, then running:
+       diff -ruNb openjdk{6,}/hotspot/src/share > icedtea-hotspot-6bXX-7bYY.patch
+       diff -ruNb openjdk{6,}/hotspot/src/os/linux >> icedtea-hotspot-6bXX-7bYY.patch
+* icedtea-bytecodeInterpreterWithChecks.patch: Same as icedtea-xslfix.patch (OpenJDK6 only, S6707485).
+* icedtea-eclipse-hotspot-6614100-7b24.patch: Fix Eclipse crash (S6614100). Fixed in OpenJDK7 b29/hs13.
