@@ -1869,33 +1869,6 @@ stamps/ports.stamp: stamps/extract.stamp
 # when in an official bxx release)
 OPENJDK_PATCHES = 
 
-# If ZERO_BUILD is set then we are building zero.
-ZERO_PATCHES = \
-	patches/hotspot/$(HSBUILD)/icedtea-bytecodeInterpreter.patch \
-	patches/icedtea-signature-iterator.patch \
-	patches/icedtea-test-atomic-operations.patch \
-	patches/icedtea-zero.patch \
-	patches/icedtea-ia64-bugfix.patch \
-	patches/hotspot/$(HSBUILD)/icedtea-parisc-opt.patch
-
-# Patches needed when not using the newer OpenJDK 7 HotSpot for zero.
-NON_ZERO_PATCHES = 
-
-if ZERO_BUILD
-  ZERO_PATCHES_COND = $(ZERO_PATCHES)
-else
-  ZERO_PATCHES_COND = 
-endif
-
-# If Shark is required, apply shark patch
-if SHARK_BUILD
-  SHARK_PATCH = patches/hotspot/$(HSBUILD)/icedtea-shark.patch
-else
-  SHARK_PATCH =
-endif
-
-ICEDTEA_FSG_PATCHES = 
-
 ICEDTEA_PATCHES = \
 	patches/icedtea-version.patch \
 	patches/hotspot/$(HSBUILD)/icedtea-version.patch \
@@ -1949,7 +1922,7 @@ ICEDTEA_PATCHES = \
 	patches/hotspot/$(HSBUILD)/icedtea-use-idx_t.patch \
 	patches/hotspot/$(HSBUILD)/icedtea-params-cast-size_t.patch \
 	patches/icedtea-clean-crypto.patch \
-	$(SHARK_PATCH) \
+	patches/hotspot/$(HSBUILD)/icedtea-shark.patch \
 	$(GCC_PATCH) \
 	patches/icedtea-arch.patch \
 	patches/icedtea-signed-types.patch \
@@ -1965,7 +1938,12 @@ ICEDTEA_PATCHES = \
 	patches/icedtea-testenv.patch \
 	patches/icedtea-pr261.patch \
 	patches/icedtea-doc-headers.patch \
-	$(ZERO_PATCHES_COND) \
+	patches/hotspot/$(HSBUILD)/icedtea-bytecodeInterpreter.patch \
+	patches/icedtea-signature-iterator.patch \
+	patches/icedtea-test-atomic-operations.patch \
+	patches/icedtea-zero.patch \
+	patches/icedtea-ia64-bugfix.patch \
+	patches/hotspot/$(HSBUILD)/icedtea-parisc-opt.patch
         patches/security/icedtea-6592792.patch \
         patches/security/icedtea-6733959.patch \
         patches/security/icedtea-6755943.patch \
