@@ -9,7 +9,7 @@ diff -r d384f5a5bd0c hotspot/src/share/vm/prims/jni.cpp
 +  // this is implemented using the GCC builtin __sync_lock_test_and_set
 +  // which is not guaranteed to do what we're using it for on all
 +  // platforms.  So we check it works before doing anything else.
-+#ifdef ASSERT
++#if defined(ZERO) && defined(ASSERT)
 +  {
 +    jint a = 0xCAFEBABE;
 +    jint b = Atomic::xchg(0xC0FFEE, &a);
@@ -18,7 +18,7 @@ diff -r d384f5a5bd0c hotspot/src/share/vm/prims/jni.cpp
 +    assert(a == 0xC0FFEE && b == (jint) 0xCAFEBABE, "Atomic::xchg() works");
 +    assert(c == &b && d == &a, "Atomic::xchg_ptr() works");
 +  }
-+#endif // ASSERT
++#endif // ZERO & ASSERT
 +  
    // At the moment it's only possible to have one Java VM,
    // since some of the runtime state is in global variables.
